feature: add main page information

--- a/estados-financieros/estados-financieros.html
+++ b/estados-financieros/estados-financieros.html
@@ -14,8 +14,7 @@
     <div class="container">
       <header>
         <h1>
-          <i class="fas fa-sack-dollar"></i>Generación de Estados Financieros de
-          producto
+          <i class="fas fa-sack-dollar"></i>Generación de Estados Financieros del producto
         </h1>
       </header>
 
@@ -222,7 +221,7 @@
               <div class="result-category">
                 <h3>
                   <i class="fas fa-file-invoice"></i> Estado de Costos de
-                  Producción
+                  Producción y de lo Vendido
                 </h3>
                 <div class="result-item">
                   <span>Materia prima directa:</span>
