--- a/estados-financieros/estados-financieros.html
+++ b/estados-financieros/estados-financieros.html
@@ -14,7 +14,7 @@
 
     <nav>
           <ul class="menu">
-            <li><a href="index.html">Inicio</a></li>
+            <li><a href="../index.html">Inicio</a></li>
 
             <li>
               <a href="nomina/nomina.html">Nómina</a>
