fix: delete estados-financieros export buttons

--- a/estados-financieros/estados-financieros.html
+++ b/estados-financieros/estados-financieros.html
@@ -9,6 +9,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
+    <script src="js/estados-financieros.js" defer></script>
   </head>
   <body>
 
@@ -296,14 +297,14 @@
               </div>
             </div>
 
-            <div class="actions">
+            <!-- <div class="actions">
               <button id="imprimir" class="btn btn-print" disabled>
                 <i class="fas fa-print"></i> Exportar Archivo (.xlsx)
               </button>
               <button id="imprimir" class="btn btn-print" disabled>
                 <i class="fas fa-print"></i> Exportar Archivo (.pdf)
               </button>
-            </div>
+            </div> -->
           </section>
         </div>
       </main>
