feat: add menu images

--- a/index.html
+++ b/index.html
@@ -33,8 +33,14 @@
             </li>
           </ul>
         </nav>
-    
-        <h1>Gamesa</h1>
+        
+
+        <div class="titulo-centro">
+          <img src="img/gamesa.jpg">
+          <h1>Gamesa</h1>
+          <img src="img/mamut.webp">
+        </div>
+
 
         <div class="texto">
           <h2>Resumen ejecutivo</h2>
@@ -72,7 +78,7 @@
 
         <footer>
           <ul>
-            <li><a href="index.html">Volver arriba</a></li>
+            <li><a href="#">Volver arriba</a></li>
           </ul>
         </footer>
   
